[gd_scene load_steps=23 format=3 uid="uid://csmg52xs05d1e"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_ncv2v"]
[ext_resource type="Texture2D" uid="uid://btcwsgnp27tx6" path="res://images/Sprite-0001.png" id="1_rc65t"]
[ext_resource type="SpriteFrames" uid="uid://dfpnisnlh7i5m" path="res://sprites/robot_frames.tres" id="2_wxl44"]
[ext_resource type="AudioStream" uid="uid://cdvwrp2suj31r" path="res://sounds/jump.wav" id="3_73a41"]
[ext_resource type="AudioStream" uid="uid://cu2ft4k3uwd2u" path="res://sounds/hurt.wav" id="4_mkmka"]
[ext_resource type="AudioStream" uid="uid://c5gk8xvel2tsp" path="res://sounds/hit3.ogg" id="5_hoc3m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qa0j5"]
size = Vector2(14, 23)

[sub_resource type="Shader" id="Shader_27hpx"]
code = "shader_type canvas_item;
 
uniform vec4 flash_color : source_color;
uniform float flash_value : hint_range(0.0, 1.0, 0.1) = 0;
 
void fragment() {
    vec4 texture_color = texture(TEXTURE, UV);
    COLOR = mix(texture_color, flash_color, flash_value);
    COLOR.a = texture_color.a;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mw4su"]
shader = SubResource("Shader_27hpx")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sv8s5"]
radius = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_34cfq"]
atlas = ExtResource("1_rc65t")
region = Rect2(384, 144, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgny0"]
atlas = ExtResource("1_rc65t")
region = Rect2(400, 144, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo77u"]
atlas = ExtResource("1_rc65t")
region = Rect2(416, 144, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n06cy"]
atlas = ExtResource("1_rc65t")
region = Rect2(432, 144, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gtu8j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34cfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgny0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo77u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n06cy")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7lllm"]
atlas = ExtResource("1_rc65t")
region = Rect2(336, 176, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y77h"]
atlas = ExtResource("1_rc65t")
region = Rect2(352, 176, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_podlq"]
atlas = ExtResource("1_rc65t")
region = Rect2(368, 176, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qydoc"]
animations = [{
"frames": [{
"duration": 0.6,
"texture": SubResource("AtlasTexture_7lllm")
}, {
"duration": 0.6,
"texture": SubResource("AtlasTexture_0y77h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_podlq")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_r035c"]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DefaultSprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_1qcb3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DefaultSprite:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxslq"]
_data = {
"Hit": SubResource("Animation_r035c"),
"RESET": SubResource("Animation_1qcb3")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 1281
collision_mask = 1025
script = ExtResource("1_ncv2v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_qa0j5")

[node name="DefaultSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_mw4su")
sprite_frames = ExtResource("2_wxl44")
animation = &"idle"
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 514
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, 0)
shape = SubResource("CircleShape2D_sv8s5")

[node name="JumpAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_73a41")

[node name="HurtAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_mkmka")

[node name="AttackAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hoc3m")

[node name="CodySprite" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_gtu8j")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.860659

[node name="JumpingStreakSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, 33)
sprite_frames = SubResource("SpriteFrames_qydoc")
frame = 2
frame_progress = 1.0

[node name="BossSpawnPosition" type="Node2D" parent="."]
position = Vector2(143, -160)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qxslq")
}
